# a2ui-dali

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  a2ui-dali.pc.in
examples/a2a-integration/: README.md  a2a-transport.cpp
examples/basic-renderer/: main.cpp  sample.jsonl
examples/custom-component/: main.cpp
examples/gallery-demo/: main.cpp
examples/gallery-demo/screens/: 01_loginForm.json  02_productCard.json  03_contactCard.json  04_userProfile.json  05_musicPlayer.json  06_weather.json  07_statsCard.json  08_eventDetailCard.json  09_recipeCard.json  10_flightStatus.json  11_accountBalance.json  12_chatMessageThread.json  13_restaurantCard.json  14_shippingStatus.json
examples/samples/: account-balance.json  login-form.json
packaging/: a2ui-dali.spec
src/core/: a2ui-message-processor.cpp  a2ui-message-processor.h  a2ui-payload-fixer.cpp  a2ui-payload-fixer.h  a2ui-sanitizer.cpp  a2ui-sanitizer.h  a2ui-stream-parser.cpp  a2ui-stream-parser.h  action-dispatcher.cpp  action-dispatcher.h  component-model.h  data-context.cpp  data-context.h  data-model.cpp  data-model.h  diff-engine.cpp  diff-engine.h  expression-parser.cpp  expression-parser.h  surface-components-model.cpp  surface-components-model.h  surface-group-model.cpp  surface-group-model.h  surface-model.cpp  surface-model.h  template-cache.cpp  template-cache.h
src/renderer/: a11y-bridge.cpp  a11y-bridge.h  a2ui-host.cpp  a2ui-host.h  a2ui-metrics.cpp  a2ui-metrics.h  a2ui-renderer.cpp  a2ui-renderer.h  a2ui-theme.cpp  a2ui-theme.h  component-registry.h  render-context.cpp  render-context.h  render-internal.h  render-style.cpp  render-style.h  view-pool.cpp  view-pool.h
src/renderer/components/: audio-player.cpp  button.cpp  card.cpp  check-box.cpp  choice-picker.cpp  date-time-input.cpp  divider.cpp  flex-container.cpp  icon.cpp  image.cpp  list.cpp  modal.cpp  progress-bar.cpp  slider.cpp  tabs.cpp  text-field.cpp  text.cpp  video.cpp
src/transport/: a2a-transport.h
test/: conformance-test.cpp  conformance_valid_messages.jsonl
tools/: build_icons.py  capture.sh  capture_gallery.sh  convert_v08_to_v09.py  extract_components.py  localize_images.py  regress.sh
